new info api/me pusher info

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a class="dropdown-item" href="common.html">Common Parameters</a></li>
             <li><a class="dropdown-item" href="errors.html">Error Handling</a></li>
             <li><a class="dropdown-item" href="data-types.html">Data Types</a></li>
+            <li><a class="dropdown-item" href="api-me.html">API /me</a></li>
             <li><a class="dropdown-item" href="pusher-events.html">Pusher Events</a></li>
           </ul>
         </li>
@@ -160,6 +161,7 @@
         <a class="nav-link" href="common.html">Common Parameters</a>
         <a class="nav-link" href="errors.html">Error Handling</a>
         <a class="nav-link" href="data-types.html">Data Types</a>
+        <a class="nav-link" href="api-me.html">API /me</a>
         <a class="nav-link" href="pusher-events.html">Pusher Events</a>
       </nav>
     </div>
