--- a/common.html
+++ b/common.html
@@ -21,7 +21,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Circuit Auction API</a>
+    <a class="navbar-brand" href="index.html">Circuit Auction API v1.0</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
